--- a/server/package.json
+++ b/server/package.json
@@ -36,10 +36,12 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/nedb": "^1.8.16",
-    "@types/node": "^20.10.5",
+    "@types/node": "^20.19.0",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/pdf-parse": "^1.1.5",
+    "@types/socket.io": "^3.0.1",
+    "@types/socket.io-client": "^1.4.36",
     "@types/supertest": "^2.0.16",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
