--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -14,7 +14,8 @@
     "paths": {
       "*": ["node_modules/*"]
     },
-    "noEmitOnError": false
+    "noEmitOnError": false,
+    "types": ["node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
