--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,7 +15,8 @@
       "*": ["node_modules/*"]
     },
     "noEmitOnError": false,
-    "types": ["node"]
+    "types": ["node"],
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
