--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.8.69",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   },
