--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/dom": "^10.4.0",
     "@types/dom-speech-recognition": "^0.0.6",
     "@types/jest": "^27.5.2",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
