--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.828.0",
+    "@aws-sdk/s3-request-presigner": "^3.828.0",
     "axios": "^1.6.3",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -20,6 +22,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "multer": "^1.4.5-lts.1",
     "nedb": "^1.8.0",
     "openai": "^4.24.1",
@@ -28,8 +31,7 @@
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.8.69",
     "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2",
-    "mongodb": "^6.3.0"
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
