--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^19.1.5",
     "@types/socket.io-client": "^3.0.0",
     "axios": "^1.9.0",
+    "jwt-decode": "^4.0.0",
     "pdfjs-dist": "^4.8.69",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
