Add react-toastify for notifications: update package.json and package-lock.json, and integrate ToastContainer in App component. Enhance UserProfilePage with success and error notifications on profile updates.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "mongodb": "^6.17.0",
     "multer": "^2.0.0",
-    "pdfjs-dist": "^4.8.69"
+    "pdfjs-dist": "^4.8.69",
+    "react-toastify": "^11.0.5"
   }
 }
