Update package.json and package-lock.json: change react-scripts version to a placeholder and add react-toastify for notifications. This prepares the project for enhanced user feedback features.

--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.30.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
+    "react-toastify": "^11.0.5",
     "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
