--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^6.17.0",
     "multer": "^2.0.0",
     "pdfjs-dist": "^4.8.69",
+    "react-scripts": "^0.0.0",
     "react-toastify": "^11.0.5"
   }
 }
